# pokecli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: formatter.rs  getter.rs  main.rs  structs.rs
src/ability/: formatter.rs  getter.rs  structs.rs
src/berry/: formatter.rs  getter.rs  structs.rs
src/item/: formatter.rs  getter.rs  structs.rs
src/move/: formatter.rs  getter.rs  structs.rs
src/pokemon/: formatter.rs  getter.rs  mod.rs  structs.rs
